--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@prisma/client": "^4.12.0",
+    "antd": "^5.4.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "cookie": "^0.5.0",
